--- a/themes/bamboo/_config.yml
+++ b/themes/bamboo/_config.yml
@@ -35,7 +35,7 @@
 # github地址, 头部导航右上角的github链接
 Github: 
   on: true
-  url: https://github.com/yuang01/hexo-theme-bamboo
+  url: https://github.com/bisucrose
 
 # 网站logo
 logo: /medias/logo.png # 为空则不显示
