--- a/_config.yml
+++ b/_config.yml
@@ -102,3 +102,7 @@ theme: bamboo
 ## Docs: https://hexo.io/docs/one-command-deployment
 deploy:
   type: ''
+
+search:
+  path: search.xml
+  field: post
