--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: 苏可璐斯的小站
-subtitle: '给你双倍甜度'
-description: '苏可璐斯的小站'
-keywords:
+title: 苏可璐斯的部落阁
+subtitle: '给你双倍甜度♡'
+description: '苏可璐斯的部落阁'
+keywords: '苏可璐斯,部落阁,博客,前端,后端,技术,生活,随笔,笔记,教程,学习,分享,甜度'
 author: bisucrose
 language: zh-CN
 timezone: 'Asia/Shanghai'
