--- a/themes/bamboo/_config.yml
+++ b/themes/bamboo/_config.yml
@@ -167,7 +167,7 @@ sidebar:
             unit: '次'
         lastupd:
           on: true
-          friendlyShow: false    # 更友好的时间显示
+          friendlyShow: true    # 更友好的时间显示
           text: '最后活动时间：'
           unit: ''
 
@@ -271,7 +271,7 @@ postNav:
 # 复制成功提示
 copy:
   on: true
-  title: '苏酱已经帮你复制好了哦'
+  title: '已经帮你复制好了哦'
   content: '粘贴时试试Win+V，会有不一样的效果喵。什么你是MacBook？那就别来凑热闹了喵'
 
 # 输入框打字特效
