--- a/_config copy.yml
+++ b/_config copy.yml
@@ -227,8 +227,8 @@ goTop:
 # 图片点击放大功能, http://fancyapps.com/fancybox/
 fancybox: 
   on: true
-  css: https://npm.elemecdn.com/@fancyapps/ui@5.0/dist/fancybox/fancybox.css
-  js:  https://npm.elemecdn.com/@fancyapps/ui@5.0/dist/fancybox/fancybox.umd.js
+  css: https://unpkg.com/@fancyapps/ui@5.0/dist/fancybox/fancybox.css
+  js:  https://unpkg.com/@fancyapps/ui@5.0/dist/fancybox/fancybox.umd.js
 
 # 统计网站访问数量
 busuanzi:
@@ -312,7 +312,7 @@ lantern:
 # https://scrollrevealjs.org/api/reveal.html 滚动动画, 旧版本用的是aos.js(已经弃用aos.js)
 scrollreveal:
   on: true
-  js: https://npm.elemecdn.com/scrollreveal@4.0.6/dist/scrollreveal.min.js
+  js: https://unpkg.com/scrollreveal@4.0.6/dist/scrollreveal.min.js
   distance: 120px
   duration: 400 # ms
   interval: 30 # ms
@@ -678,7 +678,7 @@ mermaid:
   on: true
   # built-in themes: default/forest/dark/neutral
   theme: default
-  cdn: https://npm.elemecdn.com/mermaid/dist/mermaid.min.js
+  cdn: https://unpkg.com/mermaid/dist/mermaid.min.js
 
 # pjax
 pjax:
@@ -703,7 +703,7 @@ cursor:
 # https://www.npmjs.com/package/vanilla-lazyload
 lazyload:
   enable: true
-  js: https://npm.elemecdn.com/vanilla-lazyload@17.1.0/dist/lazyload.min.js
+  js: https://unpkg.com/vanilla-lazyload@17.1.0/dist/lazyload.min.js
   onlypost: false
   loadingImg: 
   # https://pic1.zhimg.com/v2-cd38920285d125be80b3eb504052c550_b.webp
@@ -764,11 +764,11 @@ imgs:
 - 'https://pic2.zhimg.com/80/v2-29e78b52051ce542adf6d786d61fbd19_1440w.webp'
 
 CDN:
-  valine: /js/valine/index.js 
+  valine: /js/valine/index.js # https://unpkg.com/valine/dist/Valine.min.js ==> 用这个官方链接则没有 博主标识功能
   iconfont: https://at.alicdn.com/t/font_1911880_c1nvbyezg17.css
-  fontAwesome: https://npm.elemecdn.com/@fortawesome/fontawesome-free/css/all.min.css
-  aplayer: https://npm.elemecdn.com/aplayer@1.10.1/dist/APlayer.min.js
-  Meting: https://npm.elemecdn.com/meting@2/dist/Meting.min.js
+  fontAwesome: https://unpkg.com/@fortawesome/fontawesome-free/css/all.min.css
+  aplayer: https://unpkg.com/aplayer@1.10.1/dist/APlayer.min.js
+  Meting: https://unpkg.com/meting@2/dist/Meting.min.js
   livere: https://cdn-city.livere.com/js/embed.dist.js
   gitmentCss: https://unpkg.com/gitment@0.0.3/style/default.css
   gitmentJs: https://unpkg.com/gitment@0.0.3/dist/gitment.browser.js
@@ -782,8 +782,8 @@ CDN:
   paceJs: //cdn.bootcss.com/pace/1.0.2/pace.min.js
   paceCss: //cdn.bootcss.com/pace/1.0.2/themes/pink/pace-theme-flash.css
   weather: https://widget.qweather.net/simple/static/js/he-simple-common.js?v=2.0
-  typedJs: https://npm.elemecdn.com/typed.js@2.0.11
+  typedJs: https://unpkg.com/typed.js@2.0.11
   tocbotJs: https://cdnjs.cloudflare.com/ajax/libs/tocbot/4.18.2/tocbot.min.js
   tocbotCss: https://cdnjs.cloudflare.com/ajax/libs/tocbot/4.18.2/tocbot.css
-  jquery: https://npm.elemecdn.com/jquery@3.5.1/dist/jquery.min.js
-  vue: https://npm.elemecdn.com/vue@2.6.11/dist/vue.min.js
+  jquery: https://unpkg.com/jquery@3.5.1/dist/jquery.min.js
+  vue: https://unpkg.com/vue@2.6.11/dist/vue.min.js
