--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: 苏可璐斯部落阁
+title: 苏可璐斯的部落阁
 subtitle: '给你双倍甜度'
 description: '苏可璐斯的部落阁'
 keywords: 苏可璐斯,部落阁,甜度,电子,编程,生活,计算机,技术,博客,个人博客
