--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ timezone: 'Asia/Shanghai'
 
 # URL
 ## Set your site url here. For example, if you use GitHub Page, set url as 'https://username.github.io/project'
-url: https://bisucrose.github.io/
+url: https://www.bisucrose.top/
 permalink: :year/:title/
 permalink_defaults:
 pretty_urls:
@@ -29,7 +29,7 @@ category_dir: categories
 code_dir: downloads/code
 i18n_dir: :lang
 skip_render: 
-  - baidu_verify_codeva-E3MfcFHbuL.html
+  - baidu_verify_codeva-TCtgg8f5OT.html
 
 # Writing
 new_post_name: :title.md # File name of new posts
